datafusion/substrait/tests/cases/snapshots/substrait_integration__cases__consumer_integration__tests__tpch_test_20.snap
---
source: datafusion/substrait/tests/cases/consumer_integration.rs
expression: plan_str
---
Sort: SUPPLIER.S_NAME ASC NULLS LAST
  Projection: SUPPLIER.S_NAME, SUPPLIER.S_ADDRESS
    Filter: SUPPLIER.S_SUPPKEY IN (<subquery>) AND SUPPLIER.S_NATIONKEY = NATION.N_NATIONKEY AND NATION.N_NAME = Utf8("CANADA")
      Subquery:
        Projection: PARTSUPP.PS_SUPPKEY
          Filter: PARTSUPP.PS_PARTKEY IN (<subquery>) AND CAST(PARTSUPP.PS_AVAILQTY AS Decimal128(19, 0)) > (<subquery>)
            Subquery:
              Projection: PART.P_PARTKEY
                Filter: PART.P_NAME LIKE CAST(Utf8("forest%") AS Utf8)
                  TableScan: PART
            Subquery:
              Projection: Decimal128(Some(5),2,1) * sum(LINEITEM.L_QUANTITY)
                Aggregate: groupBy=[[]], aggr=[[sum(LINEITEM.L_QUANTITY)]]
                  Projection: LINEITEM.L_QUANTITY
                    Filter: LINEITEM.L_PARTKEY = LINEITEM.L_ORDERKEY AND LINEITEM.L_SUPPKEY = LINEITEM.L_PARTKEY AND LINEITEM.L_SHIPDATE >= CAST(Utf8("1994-01-01") AS Date32) AND LINEITEM.L_SHIPDATE < CAST(Utf8("1995-01-01") AS Date32)
                      TableScan: LINEITEM
            TableScan: PARTSUPP
      Cross Join: 
        TableScan: SUPPLIER
        TableScan: NATION
